--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,30 @@
-name: Build and Export Images as Tarballs
+name: Build Images
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:  # 只允许手动触发（最简单！）
 
 jobs:
-  build-and-export:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker
-        run: |
-          docker --version
-
-      # 构建后端镜像
-      - name: Build backend image
-        run: |
-          docker build -t cultivation-backend -f deploy/Dockerfile.backend .
-
-      # 构建前端镜像
-      - name: Build frontend image
-        run: |
-          docker build -t cultivation-frontend -f deploy/Dockerfile.frontend .
-
-      # 导出为 tar 文件
-      - name: Save images to tarballs
-        run: |
-          mkdir -p artifacts
-          docker save cultivation-backend:latest -o artifacts/cultivation-backend.tar
-          docker save cultivation-frontend:latest -o artifacts/cultivation-frontend.tar
-
-      # 上传为 GitHub Actions Artifacts（可下载）
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
-          name: cultivation-images
-          path: artifacts/
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build backend
+        run: |
+          docker build -t ghcr.io/${{ github.repository_owner }}/cultivation-backend:latest -f deploy/Dockerfile.backend .
+          docker push ghcr.io/${{ github.repository_owner }}/cultivation-backend:latest
+
+      - name: Build frontend
+        run: |
+          docker build -t ghcr.io/${{ github.repository_owner }}/cultivation-frontend:latest -f deploy/Dockerfile.frontend .
+          docker push ghcr.io/${{ github.repository_owner }}/cultivation-frontend:latest
